--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap");
 @import "tailwindcss";
 :root {
   --text-primary: 64px;
@@ -15,14 +16,28 @@
   --color-grey2: #f9f9f9;
   --color-grey3: #e6e6e6;
   --color-grey4: #bbbbbb;
-  --color-light-grey:#FDFEFF;
+  --color-grey5: #efefef;
+  --color-light-grey: #fdfeff;
   --color-dark: #121212;
   --color-dark2: #484848;
-  --color-blueish:#009BF9;
+  --color-dark3: #727272;
+  --color-dark4: #323232;
+  --color-light-dark: #707070;
+  --color-blueish: #009bf9;
+  --color-light-red: #fdf9f8;
+  --color-light-green: #ecfff2;
+  --color-light-purple: #e8e9ff;
+  --color-light-orange: #ffeaee;
+  --color-orange: #ff4200;
+  --color-dark-grey: #f8f8f8;
+  --color-dark-grey2: #949494;
+
 }
 @theme {
   --font-inter: "Inter", sans-serif;
   --font-urbanist: "Urbanist", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
+  --font-quicksand: "Quicksand", sans-serif;
 }
 .font-inter {
   font-family: var(--font-inter);
@@ -36,6 +51,7 @@
 }
 @theme {
   --inset-shadow-main: inset 0px -40px 0px 35px white;
+  --shadow-orange-in: inset 0px 0px 0px 30px var(--color-orange);
 }
 @theme {
   --leading-more: var(--leading-more);
@@ -54,6 +70,8 @@
 }
 .btn-compliance-docs {
   -webkit-background-clip: text;
-  -webkit-text-fill-color: rgba(255,255,255,0.001);
+  -webkit-text-fill-color: rgba(255, 255, 255, 0.001);
 }
-
+.letter-spacing-3 {
+  letter-spacing: -2px !important ;
+}
